# webgpu-cross-platform-app

./: .gitignore  BUNDLE-TRANSFORM-BABEL.md  CMakeLists.txt  ENGINE-COMPARISON-SUMMARY.md  HERMES-PORT-REPORT.md  PARITY-MULTI-ENGINE-REPORT.md  QUICKJS-PORT-REPORT.md  README.md  SCENE-REPORT.md  SHARED-V8-REPORT.md  babel.config.js  main.cpp  package-lock.json  package.json
.github/workflows/: ci.yml
Android/: build.gradle.kts  gradle.properties  settings.gradle.kts
Android/app/: build.gradle.kts
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/com/dawntest/: AssetExtractor.java  DawnView.java  HttpFetcher.java  MainActivity.java  NativeBridge.java
Android/app/src/main/res/values/: strings.xml
assets/bundle/: bjs-scene1-abstractAudioBus-BUWArL29.js  bjs-scene1-animationGroup-CP0ogoYX.js  bjs-scene1-background.fragment-BRfpDp0V.js  bjs-scene1-background.fragment-Ds-Nv7oh.js  bjs-scene1-background.vertex-BOX8OVgM.js  bjs-scene1-background.vertex-CWOYoi5Z.js  bjs-scene1-backgroundUboDeclaration-CVDdjNUi.js  bjs-scene1-backgroundUboDeclaration-UVMScAdi.js  bjs-scene1-basisTextureLoader-B-6jHGCj.js  bjs-scene1-bumpFragment-DYmMyM5D.js  bjs-scene1-bumpFragment-c5NGOwRK.js  bjs-scene1-bumpVertex-C39a5sIu.js  bjs-scene1-bumpVertex-DyCqGsyO.js  bjs-scene1-bumpVertexDeclaration-Bq4Y8ViB.js  bjs-scene1-bumpVertexDeclaration-cmLUdmO4.js  bjs-scene1-clipPlaneFragment-CEAs6RTC.js  bjs-scene1-clipPlaneFragment-L5LqvNQX.js  bjs-scene1-clipPlaneVertex-BMBPUOE5.js  bjs-scene1-clipPlaneVertex-BmFxw0pW.js  bjs-scene1-color.fragment-BK38dWON.js  bjs-scene1-color.fragment-DwgQVhgu.js  bjs-scene1-color.vertex-D2yMB8jg.js  bjs-scene1-color.vertex-dx4-goiL.js  bjs-scene1-ddsTextureLoader-Dl71Cl0p.js  bjs-scene1-decalFragment-CCUkgrDJ.js  bjs-scene1-default.fragment-C-F8cI47.js  bjs-scene1-default.fragment-CDqSA8Co.js  bjs-scene1-default.vertex-CzOyQ5l-.js  bjs-scene1-default.vertex-mn0Ad_aq.js  bjs-scene1-defaultUboDeclaration-B1uIWj7I.js  bjs-scene1-defaultUboDeclaration-BiCqUd-h.js  bjs-scene1-envTextureLoader-BmtwisLK.js  bjs-scene1-exrTextureLoader-CH2zifus.js  bjs-scene1-flowGraphApplyForceBlock-CJKV3WsX.js  bjs-scene1-flowGraphApplyImpulseBlock-BEp49lzC.js  bjs-scene1-flowGraphArrayIndexBlock-JdoFb5Zd.js  bjs-scene1-flowGraphBezierCurveEasingBlock-DoHycBvy.js  bjs-scene1-flowGraphBinaryOperationBlock-D46vwTFx.js  bjs-scene1-flowGraphBranchBlock-DeR_hSDx.js  bjs-scene1-flowGraphCachedOperationBlock-Bdz8Akfk.js  (+15636 more)
assets/bundle-chakra/: scene1.lite.chakra.js  scene10.lite.chakra.js  scene100.lite.chakra.js  scene101.lite.chakra.js  scene102.lite.chakra.js  scene103.lite.chakra.js  scene104.lite.chakra.js  scene105.lite.chakra.js  scene106.lite.chakra.js  scene11.lite.chakra.js  scene110.lite.chakra.js  scene111.lite.chakra.js  scene112.lite.chakra.js  scene113.lite.chakra.js  scene114.lite.chakra.js  scene115.lite.chakra.js  scene116.lite.chakra.js  scene12.lite.chakra.js  scene120.lite.chakra.js  scene121.lite.chakra.js  scene122.lite.chakra.js  scene123.lite.chakra.js  scene124.lite.chakra.js  scene125.lite.chakra.js  scene126.lite.chakra.js  scene127.lite.chakra.js  scene128.lite.chakra.js  scene129.lite.chakra.js  scene13.lite.chakra.js  scene14.lite.chakra.js  scene140.lite.chakra.js  scene141.lite.chakra.js  scene142.lite.chakra.js  scene143.lite.chakra.js  scene144.lite.chakra.js  scene145.lite.chakra.js  scene146.lite.chakra.js  scene147.lite.chakra.js  scene148.lite.chakra.js  scene149.lite.chakra.js  (+148 more)
assets/bundle/bundle-info/: bjs-scene1.json  bjs-scene2.json  bjs-scene3.json  bjs-scene4.json  bjs-scene5.json  bjs-scene6.json  bjs-scene7.json  bjs-scene8.json  bjs-scene9.json  scene1.json  scene10.json  scene11.json  scene110.json  scene111.json  scene112.json  scene113.json  scene114.json  scene115.json  scene116.json  scene12.json  scene120.json  scene121.json  scene122.json  scene123.json  scene124.json  scene125.json  scene126.json  scene127.json  scene128.json  scene129.json  scene13.json  scene14.json  scene140.json  scene141.json  scene142.json  scene143.json  scene144.json  scene15.json  scene150.json  scene151.json  (+94 more)
assets/script/: .gitignore  babel.config.cjs  package.json  tsconfig.json
assets/script/scripts/: babel-plugin-rewrite-dynamic-import.cjs  build.mjs
assets/script/src/lite/: scene200.ts
docs/: PARITY-ITERATION-REPORT.md  SIZE-REPORT.md
documentation/: benchmark.md
js/: runtime-shim.js
scripts/: babel-plugin-rewrite-dynamic-import.js
src/appRuntime/Chakra/: chakra_host.cpp  chakra_host.h  chakra_sdk_compat.h
src/appRuntime/Hermes/: chakra_compat.cpp  chakra_compat.h  chakra_host.cpp  chakra_host.h  hermes_setup.cmake
src/appRuntime/JSC/: chakra_compat.cpp  chakra_compat.h  chakra_host.cpp  chakra_host.h  jsc_setup.cmake
src/appRuntime/QuickJS/: chakra_compat.cpp  chakra_compat.h  chakra_host.cpp  chakra_host.h
src/appRuntime/Shared/: dom_shim.cpp  dom_shim.h  wgpu_bridge.cpp  wgpu_bridge.h  wgpu_enums.cpp  wgpu_enums.h  worker_shim.cpp  worker_shim.h
src/appRuntime/V8/: chakra_compat.cpp  chakra_compat.h  chakra_host.cpp  chakra_host.h  packages.config  v8_setup.cmake
src/framework/: bench.cpp  bench.h
src/framework/android/: fs_loader.cpp  fs_loader.h  http_fetcher.cpp  http_fetcher.h  image_decoder.cpp  image_decoder.h  native_window.cpp  native_window.h
src/framework/apple/: fs_loader.cpp  fs_loader.h  http_fetcher.cpp  http_fetcher.h  image_decoder.cpp  image_decoder.h  native_window.cpp  native_window.h
src/framework/linux/: fs_loader.cpp  fs_loader.h  http_fetcher.cpp  http_fetcher.h  image_decoder.cpp  image_decoder.h  native_window.cpp  native_window.h
src/framework/win32/: fs_loader.cpp  fs_loader.h  http_fetcher.cpp  http_fetcher.h  image_decoder.cpp  image_decoder.h  native_window.cpp  native_window.h
src/platform/android/: android_app.cpp  android_app.h  jni_bridge.cpp  libdawntest.map
tools/bench/: run-bench.mjs  run-bench.ps1  run-bench.sh
